@@ -1,6 +1,8 @@
 package com.patrushev;
 
 import com.sun.management.GarbageCollectionNotificationInfo;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 import javax.management.Notification;
 import javax.management.NotificationEmitter;
@@ -10,47 +12,60 @@ import java.lang.management.GarbageCollectorMXBean;
 import java.util.ArrayList;
 import java.util.List;
 
+/*
+ -XX:+UseG1GC
+ -XX:+UseConcMarkSweepGC
+ -XX:+UseSerialGC
+ -XX:+UseParallelGC
+*/
 
 public class GcTracker {
+    private static Logger logger = LoggerFactory.getLogger("logger");
+
+    private static List<GCjobReport> reports = new ArrayList<>();
+
     private static long youngGCcount;
     private static long youngGCDurationCount;
     private static long tempYoungGCCount;
     private static long oldGCcount;
     private static long oldGCDurationCount;
     private static long tempOldGCCount;
+    private static long totalGCDuration;
     private static int minuteNumber = 1;
-    private static List<GarbageCollectorMXBean> gcbeans = java.lang.management.ManagementFactory.getGarbageCollectorMXBeans();
 
+    //предварительная настройка отслеживания работы GC
     static {
-        for (GarbageCollectorMXBean gcbean : gcbeans) {
-            System.out.println("GC name:" + gcbean.getName());
+        //получаем список сборщиков мусора и выводим их названия в консоль
+        List<GarbageCollectorMXBean> gcBeans = java.lang.management.ManagementFactory.getGarbageCollectorMXBeans();
+        for (GarbageCollectorMXBean gcBean : gcBeans) {
+            System.out.println("GC name:" + gcBean.getName());
 
             //делаем бин сборщика мусора источником оповещений о событиях
-            NotificationEmitter emitter = (NotificationEmitter) gcbean;
+            NotificationEmitter emitter = (NotificationEmitter) gcBean;
             //создаем слушателя оповещений о событиях
             NotificationListener listener = new NotificationListener() {
 
                 //определяем метод, в котором будет происходить обработка полученных оповещений о событиях
                 @Override
-                public void handleNotification(Notification notification, Object handback) {
+                public void handleNotification(Notification notification, Object handBack) {
                     //проверяем, что оповещение является оповещением о сборке мусора
                     if (notification.getType().equals(GarbageCollectionNotificationInfo.GARBAGE_COLLECTION_NOTIFICATION)) {
                         //получаем всю информацию о сборке мусора из объекта оповещения
                         GarbageCollectionNotificationInfo info = GarbageCollectionNotificationInfo.from((CompositeData) notification.getUserData());
-                        //получаем длительность сборки мусора
-                        if (info.getGcName().contains("Young")) {
-                            System.out.println("young сборка №" + info.getGcInfo().getId());
-//                            tempYoungGCCount = info.getGcInfo().getId();
+
+                        if (info.getGcName().contains("Young") || info.getGcName().contains("ParNew") || info.getGcName().contains("Copy") || info.getGcName().equals("PS Scavenge")) {
+                            logger.info("young сборка №" + info.getGcInfo().getId());
                             tempYoungGCCount++;
                             youngGCcount++;
                             youngGCDurationCount += info.getGcInfo().getDuration();
+                            totalGCDuration += info.getGcInfo().getDuration();
                         }
-                        if (info.getGcName().contains("Old")) {
-                            System.out.println("old сборка №" + info.getGcInfo().getId());
-//                            tempOldGCCount = info.getGcInfo().getId();
+                        if (info.getGcName().contains("Old") || info.getGcName().contains("ConcurrentMarkSweep") || info.getGcName().contains("MarkSweepCompact") || info.getGcName().equals("PS MarkSweep")) {
+                            logger.info("old сборка №" + info.getGcInfo().getId());
                             tempOldGCCount++;
                             oldGCcount++;
                             oldGCDurationCount += info.getGcInfo().getDuration();
+                            totalGCDuration += info.getGcInfo().getDuration();
                         }
                     }
                 }
@@ -63,29 +78,18 @@ public class GcTracker {
 
     @SuppressWarnings("InfiniteLoopStatement")
     public static void main(String[] args) {
-        long startTime1 = System.nanoTime();
-        long startTime = System.nanoTime();
+        long applicationStartTime = System.nanoTime();
+        long intermediateTimestamp = System.nanoTime();
         try {
             List<Object> garbage = new ArrayList<>();
             int count = 10_000;
             while (true) {
-                if ((System.nanoTime() - startTime) / 1000_000_000 >= 60) {
-                    System.err.println("Приложение проработало " + (System.nanoTime() - startTime1) / 1000_000_000 + " секунд");
-                    System.err.println("Статистика минуты №" + minuteNumber + ":");
-//                    long temp1 = youngGCcount - tempYoungGCCount;
-                    System.err.println("Количество сборок young - " + tempYoungGCCount);
-//                    tempYoungGCCount += youngGCcount;
-                    tempYoungGCCount = 0;
-//                    tempYoungGCCount = temp1;
-                    System.err.println("Затраченное время на сборки young - " + youngGCDurationCount + " миллисекунд");
-//                    long temp2 = oldGCcount - tempOldGCCount;
-                    System.err.println("Количество сборок old - " + tempOldGCCount);
-//                    tempOldGCCount += oldGCcount;
-                    tempOldGCCount = 0;
-                    System.err.println("Затраченное время на сборки old - " + oldGCDurationCount + " миллисекунд\n");
-                    youngGCDurationCount = oldGCDurationCount = 0;
+                if ((System.nanoTime() - intermediateTimestamp) / 1000_000_000 >= 60) {
+                    reports.add(new GCjobReport(minuteNumber, tempYoungGCCount, youngGCDurationCount, tempOldGCCount, oldGCDurationCount));
+                    System.out.println("Приложение проработало " + (System.nanoTime() - applicationStartTime) / 1000_000_000 + " секунд");
+                    tempYoungGCCount = tempOldGCCount = youngGCDurationCount = oldGCDurationCount = 0;
                     minuteNumber++;
-                    startTime = System.nanoTime();
+                    intermediateTimestamp = System.nanoTime();
                 }
                 for (int i = 0; i < count; i++) {
                     garbage.add(new Object());
@@ -94,14 +98,31 @@ public class GcTracker {
                 for (int i = 0; i < count / 2; i++) {
                     garbage.remove(garbage.size() - 1);
                 }
-                Thread.sleep(1);
+                Thread.sleep(15);
             }
         } catch (InterruptedException e) {
             e.printStackTrace();
         } finally {
-            System.out.println("Приложение проработало " + (System.nanoTime() - startTime1) / 1000_000_000 + " секунд");
+
+            for (GCjobReport report : reports) {
+                System.out.println("Статистика минуты №" + report.getMinuteNumber() + ":");
+                System.out.println("Количество сборок young - " + report.getYoungGCcount());
+                System.out.println("Затраченное время на сборки young - " + report.getYoungGCDurationCount() + " миллисекунд");
+                System.out.println("Количество сборок old - " + report.getOldGCcount());
+                System.out.println("Затраченное время на сборки old - " + report.getOldGCDurationCount() + " миллисекунд\n");
+            }
+
+            System.out.println("Статистика последней минуты работы приложения:");
+            System.out.println("Количество сборок young - " + tempYoungGCCount);
+            System.out.println("Затраченное время на сборки young - " + youngGCDurationCount + " миллисекунд");
+            System.out.println("Количество сборок old - " + tempOldGCCount);
+            System.out.println("Затраченное время на сборки old - " + oldGCDurationCount + " миллисекунд\n");
+
+            System.out.println("Статистика полного времени работы приложения:");
+            System.out.println("Приложение проработало " + (System.nanoTime() - applicationStartTime) / 1000_000_000 + " секунд");
             System.out.println("Количество сборок young - " + youngGCcount);
             System.out.println("Количество сборок old - " + oldGCcount);
+            System.out.println("Время, затраченное на сборку мусора - " + totalGCDuration + " миллисекунд");
         }
     }
 }
